Standardize attempt service API responses