@@ -29,6 +29,9 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.kafka.core.KafkaTemplate;
 import org.springframework.stereotype.Service;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.data.redis.core.script.DefaultRedisScript;
 import org.springframework.http.HttpStatus;
@@ -175,8 +178,9 @@ public class AttemptService {
     }
 
     @Transactional(readOnly = true)
-    public AttemptHistoryResponse getHistory(String userId) {
-        List<Attempt> rawAttempts = attemptRepository.findByUserIdOrderByStartedAtDesc(userId);
+    public Page<AttemptHistorySummary> getHistory(String userId, int page, int size) {
+        Page<Attempt> rawAttempts = attemptRepository.findByUserId(userId,
+                PageRequest.of(page, size, Sort.by(Sort.Direction.DESC, "startedAt")));
         
         List<AttemptHistorySummary> historySummaries = rawAttempts.stream()
                 .map(attempt -> AttemptHistorySummary.builder()
@@ -186,11 +190,10 @@ public class AttemptService {
                         .finalScore(attempt.getFinalScore())
                         .startedAt(attempt.getStartedAt())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
-        return AttemptHistoryResponse.builder()
-                .attempts(historySummaries)
-                .build();
+        return new org.springframework.data.domain.PageImpl<>(historySummaries, rawAttempts.getPageable(),
+                rawAttempts.getTotalElements());
     }
 
     @Transactional(readOnly = true)
@@ -258,12 +261,12 @@ public class AttemptService {
                 .build();
     }
 
-    public AttemptStateResponse getAttemptState(String attemptId) {
+    public AttemptStateSnapshot getAttemptState(String attemptId) {
         AttemptRedisHash hash = attemptRedisRepository.findById(attemptId).orElseGet(() -> rehydrate(attemptId));
-        return toStateResponse(hash);
+        return new AttemptStateSnapshot(toStateResponse(hash), hash.getVersion());
     }
 
-    public PatchAttemptResponse patchAttempt(String attemptId, PatchAttemptRequest request) {
+    public Long patchAttempt(String attemptId, PatchAttemptRequest request) {
         if (request.getQuestionId() == null || request.getQuestionId().isBlank()
                 || request.getVersion() == null || request.getCurrentQuestionIndex() == null) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST,
@@ -306,7 +309,7 @@ public class AttemptService {
             throw new ResponseStatusException(HttpStatus.CONFLICT,
                     "Attempt version conflict; reload the latest state and retry");
         }
-        return PatchAttemptResponse.builder().success(true).version(nextVersion).build();
+        return nextVersion;
     }
 
     public SseEmitter getSseEmitter(String attemptId) {
@@ -351,8 +354,10 @@ public class AttemptService {
         return AttemptStateResponse.builder().attemptId(hash.getAttemptId()).userId(hash.getUserId())
                 .testId(hash.getExamId()).status(hash.getStatus())
                 .currentQuestionIndex(hash.getCurrentQuestionIndex()).answers(readAnswers(hash.getAnswersJson()))
-                .version(hash.getVersion()).build();
+                .build();
     }
+
+    public record AttemptStateSnapshot(AttemptStateResponse state, Long attemptVersion) { }
 
     private Map<String, String> readAnswers(String json) {
         if (json == null || json.isBlank()) return new java.util.LinkedHashMap<>();
